[gd_scene load_steps=8 format=2]

[ext_resource path="res://UIMain/ContextMenu/TroopMenu.gd" type="Script" id=2]
[ext_resource path="res://UIMain/ContextMenu/ContextMenu.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="TroopMenu" instance=ExtResource( 6 )]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( 2 )

[node name="H" type="HBoxContainer" parent="." index="3"]
offset_right = 40.0
offset_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="H" index="0"]
offset_right = 163.0
offset_bottom = 276.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="H/V" index="0"]
offset_right = 163.0
offset_bottom = 38.1229
text = "MOVE"

[node name="Follow" type="Button" parent="H/V" index="1"]
offset_top = 34.0
offset_right = 163.0
offset_bottom = 72.1229
text = "FOLLOW"

[node name="Attack" type="Button" parent="H/V" index="2"]
offset_top = 68.0
offset_right = 163.0
offset_bottom = 106.123
text = "ATTACK"

[node name="Stunt" type="Button" parent="H/V" index="3"]
offset_top = 102.0
offset_right = 163.0
offset_bottom = 140.123
text = "STUNT"

[node name="Enter" type="Button" parent="H/V" index="4"]
offset_top = 136.0
offset_right = 163.0
offset_bottom = 174.123
text = "ENTER"

[node name="Occupy" type="Button" parent="H/V" index="5"]
offset_top = 170.0
offset_right = 163.0
offset_bottom = 208.123
text = "OCCUPY"

[node name="TroopDetail" type="Button" parent="H/V" index="6"]
offset_top = 204.0
offset_right = 163.0
offset_bottom = 242.123
text = "TROOP_DETAIL"

[node name="TroopPerson" type="Button" parent="H/V" index="7"]
offset_top = 238.0
offset_right = 163.0
offset_bottom = 276.123
text = "TROOP_PERSON"

[node name="Stunt" type="VBoxContainer" parent="H" index="1"]
visible = false
offset_left = 159.0
offset_right = 159.0
offset_bottom = 276.0

[node name="Blank" type="Button" parent="H/Stunt" index="0"]
offset_bottom = 108.0
minimum_size = Vector2( 0, 108 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
[connection signal="pressed" from="H/V/Move" to="." method="_on_Move_pressed"]
[connection signal="pressed" from="H/V/Follow" to="." method="_on_Follow_pressed"]
[connection signal="pressed" from="H/V/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="H/V/Stunt" to="." method="_on_Stunt_pressed"]
[connection signal="pressed" from="H/V/Enter" to="." method="_on_Enter_pressed"]
[connection signal="pressed" from="H/V/Occupy" to="." method="_on_Occupy_pressed"]
[connection signal="pressed" from="H/V/TroopDetail" to="." method="_on_TroopDetail_pressed"]
[connection signal="pressed" from="H/V/TroopPerson" to="." method="_on_TroopPerson_pressed"]
